<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_group"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/navigation_test"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_tests" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/navigation_chat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_lock_24"
            android:title="@string/logout"/>
    </group>
</menu>