<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_navigation"
    app:startDestination="@id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.edu.mobiletest.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/registration_fragment"
        android:name="com.edu.mobiletest.ui.login.RegistrationFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_registration"/>

    <fragment
        android:id="@+id/password_reset_fragment"
        android:name="com.edu.mobiletest.ui.login.PasswordResetFragment"
        android:label="@string/password_reset_title"
        tools:layout="@layout/fragment_password_reset" />

</navigation>