<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <include
        android:id="@+id/progress"
        layout="@layout/progress_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/ubuntu_bold_italic"
        android:gravity="center_horizontal"
        android:text="@string/app_main_title"
        android:textColor="@color/main_color_pink"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:layout_marginTop="@dimen/dp25"
        android:hint="@string/enter_email"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:layout_marginTop="@dimen/dp10"
        android:hint="@string/enter_password"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/forgot_password"
        android:textColor="@color/main_color_pink"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toBottomOf="@id/passwordField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:layout_marginTop="@dimen/dp10"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/enter"
        app:layout_constraintTop_toBottomOf="@id/forgotPwd" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:layout_marginTop="@dimen/dp10"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/loginBtn" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="emailField,passwordField,loginBtn, registerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>