<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/progress_loader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:hint="@string/enter_first_name"
        android:layout_marginTop="@dimen/dp10"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:hint="@string/enter_last_name"
        android:layout_marginTop="@dimen/dp5"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/firstNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:hint="@string/enter_email"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="@dimen/dp5"
        app:boxStrokeWidthFocused="1dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/lastNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        android:hint="@string/enter_password"
        android:layout_marginTop="@dimen/dp5"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/emailField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginHorizontal="@dimen/field_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/passwordField" />



</androidx.constraintlayout.widget.ConstraintLayout>