<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_chat_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/profile_name"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/profileImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/groupNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/dp10"
        android:hint="@string/group_title"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/profileNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/groupNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ratingInGroupField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/dp10"
        android:hint="@string/rating"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/groupNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentRatingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/overallScoreField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/dp10"
        android:hint="@string/total_score"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:layout_constraintTop_toBottomOf="@id/ratingInGroupField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentOverallScoreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/listLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/finished_tests"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:paddingHorizontal="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/listLabel" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="groupNameField, ratingInGroupField, overallScoreField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signOut"
        android:layout_width="@dimen/dp250"
        android:layout_height="wrap_content"
        android:text="@string/signOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>